--- a/videosearch/.gitignore
+++ b/videosearch/.gitignore
@@ -4,3 +4,4 @@ indexer/global_descriptors/index_dataset
 indexer/global_descriptors/join_indexes
 indexer/local_descriptors/extract
 indexer/local_descriptors/compute_descriptors_*
+retriever/retrieve_on_dataset
